# evefrontier_datasets

./: .env.example  .gitignore  CODEOWNERS  LICENSE  README.md  SECURITY.md  WARP.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
docs/: threat-model.md
evefrontier_datasets/: __init__.py  cli.py  data_analysis.py  data_loader.py  visualization.py
notebooks/: data-comparison.ipynb  data_comparison.ipynb  data_visualization.ipynb  e6c4_e6c5_compare.ipynb  solar_system_viewer.ipynb  spatial_exploration.ipynb
notebooks/scripts/: schema_compare.py  shared_diff.py  shared_schema_inventory.py
